<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_weixin"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@color/appbg"
    android:orientation="vertical" >

	<RelativeLayout
		android:layout_marginBottom="10dp"
		android:id="@+id/relative_top"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/appbg" >

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="44dp"
			android:gravity="center"
			android:layout_centerInParent="true"
			android:text="@string/more"
			android:textColor="@color/black"
			android:textSize="17sp"
			/>
		<View
			android:layout_below="@+id/title"
			android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="@color/navigation_line"/>

	</RelativeLayout>

	<TextView
		android:layout_below="@id/relative_top"
		android:id="@+id/tv_feedback"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:gravity="center_vertical"
		android:paddingLeft="15dp"
		android:textSize="15sp"
		android:background="@drawable/round_text_out"
		android:textColor="@android:color/black"
		android:text="@string/Feedback" />

	<TextView
		android:id="@+id/tv_comment"
		android:layout_below="@id/tv_feedback"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:onClick="onClickComment"
		android:textSize="15sp"
		android:gravity="center_vertical"
		android:textColor="@android:color/black"
		android:background="@drawable/round_text_out"
		android:paddingLeft="15dp"
		android:text="@string/comment" />
	<TextView
		android:id="@+id/tv_privacy"
		android:layout_below="@id/tv_comment"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:textSize="15sp"
		android:gravity="center_vertical"
		android:textColor="@android:color/black"
		android:background="@drawable/round_text_out"
		android:paddingLeft="15dp"
		android:text="@string/privacy" />
	<TextView
		android:id="@+id/tv_use"
		android:layout_below="@id/tv_privacy"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:textSize="15sp"
		android:gravity="center_vertical"
		android:textColor="@android:color/black"
		android:background="@drawable/round_text_out"
		android:paddingLeft="15dp"
		android:text="@string/terms_of_use"
		android:layout_marginBottom="10dp"/>


	<TextView
		android:layout_below="@id/tv_use"
		android:id="@+id/tv_Get_PRO"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:gravity="center_vertical"
		android:paddingLeft="15dp"
		android:textSize="15sp"
		android:background="@drawable/round_text_out"
		android:textColor="@android:color/black"
		android:text="@string/downtitle" />

	<com.google.android.gms.ads.AdView
		android:id="@+id/adView"
		android:hardwareAccelerated="true"
		android:background="#00000000"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		ads:adSize="BANNER"
		ads:adUnitId="@string/bannerunit">
	</com.google.android.gms.ads.AdView>


</RelativeLayout>