<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/type_tv_all"
            android:text="@string/all"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/type_iv_all"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/collectionselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </RelativeLayout>
    <View
        android:background="@color/applistline"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"/>
    <RelativeLayout
        android:id="@+id/rtl_attractions"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/type_tv_attractions"
            android:text="@string/attractions"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/type_iv_attractions"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/collectionselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </RelativeLayout>
    <View
        android:background="@color/applistline"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"/>
    <RelativeLayout
        android:id="@+id/rtl_hotel"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/type_tv_hotel"
            android:text="@string/hotel"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/im_type_hotel"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/collectionselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </RelativeLayout>
    <View
        android:background="@color/applistline"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"/>
    <RelativeLayout
        android:id="@+id/rtl_restaurant"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/type_tv_restaurant"

            android:text="@string/restaurant"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/type_iv_restaurant"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/collectionselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </RelativeLayout>
    <View
        android:background="@color/applistline"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"/>
    <RelativeLayout
        android:id="@+id/rtl_shopping"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/type_tv_shopping"
            android:text="@string/shop"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/type_iv_shopping"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/collectionselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </RelativeLayout>
    <View
        android:background="@color/applistline"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"/>
    <RelativeLayout
        android:id="@+id/rtl_entertainment"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/type_tv_entertainment"
            android:text="@string/entertainment"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/type_iv_entertainment"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/collectionselect"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>
</LinearLayout>
