<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:id="@+id/ly_main_weixin"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/appbg"
	android:orientation="vertical" >

	<RelativeLayout
		android:layout_width="fill_parent"
		android:id="@+id/ll"
		android:layout_height="wrap_content"
		android:background="@color/appbg" >

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="44dp"
			android:gravity="center"
			android:layout_centerInParent="true"
			android:text="@string/app_name"
			android:textColor="@color/black"
			android:textSize="17sp"
			/>

		<TextView
			android:id="@+id/tv_remove_id"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#007AFF"
			android:paddingRight="15dp"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:text="@string/remove_ad"
			android:textSize="15sp"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"/>
		<View
			android:layout_below="@+id/title"
			android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="@color/navigation_line"/>

	</RelativeLayout>

	<com.SelfTourGuide.bangkok.util.OverScrollView
		android:layout_below="@+id/ll"
		android:scrollbars="none"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/appbg"
		android:fadingEdge="none">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/appbg"
			android:orientation="vertical">

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginTop="15dp"
				android:background="@color/applistline" />

			<RelativeLayout
				android:id="@+id/rl_overview"
				android:layout_width="match_parent"
				android:layout_height="73dp"
				android:layout_gravity="center_vertical"
				android:background="@color/white"
				android:gravity="center_vertical">

				<ImageView
					android:id="@+id/overview"
					android:layout_width="wrap_content"
					android:layout_centerVertical="true"
					android:layout_height="wrap_content"
					android:layout_marginLeft="42dp"
					android:src="@drawable/overview" />

				<TextView
					android:id="@+id/tv_overview"
					android:layout_width="wrap_content"
					android:layout_height="73dp"
					android:layout_centerVertical="true"
					android:layout_marginLeft="56dp"
					android:layout_toRightOf="@+id/overview"
					android:gravity="center_vertical"

					android:text="@string/overview"
					android:textColor="@color/black"
					android:textSize="17sp" />

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_alignParentRight="true"
					android:layout_marginRight="16dp"
					android:src="@drawable/arrow" />
			</RelativeLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/applistline" />

			<RelativeLayout
				android:id="@+id/rl_attractions"
				android:layout_width="match_parent"
				android:layout_height="73dp"
				android:background="@color/white"
				android:gravity="center_vertical">

				<ImageView
					android:id="@+id/attractions"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="42dp"
					android:gravity="center_vertical"
					android:layout_centerVertical="true"
					android:src="@drawable/attractions" />

				<TextView
					android:id="@+id/tv_attractions"
					android:layout_width="wrap_content"
					android:layout_height="73dp"
					android:layout_marginLeft="56dp"
					android:layout_toRightOf="@id/attractions"
					android:gravity="center_vertical"
					android:text="@string/attractions"
					android:textColor="@color/black"
					android:textSize="17sp" />

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_marginRight="16dp"
					android:gravity="center_vertical"
					android:layout_centerVertical="true"
					android:src="@drawable/arrow" />
			</RelativeLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/applistline" />

			<RelativeLayout
				android:id="@+id/rl_hotel"
				android:layout_width="match_parent"
				android:layout_height="73dp"
				android:background="@color/white"
				android:gravity="center_vertical">

				<ImageView
					android:id="@+id/hotel"
					android:layout_width="wrap_content"
					android:layout_centerVertical="true"
					android:layout_height="wrap_content"
					android:layout_marginLeft="42dp"
					android:src="@drawable/hotellist" />

				<TextView
					android:id="@+id/tv_hotel"
					android:layout_width="wrap_content"
					android:layout_height="73dp"
					android:layout_marginLeft="56dp"
					android:gravity="center_vertical"
					android:layout_centerVertical="true"
					android:layout_toRightOf="@id/hotel"
					android:text="@string/hotel"
					android:textColor="@color/black"
					android:textSize="17sp" />

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="16dp"
					android:src="@drawable/arrow" />
			</RelativeLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/applistline" />

			<RelativeLayout
				android:id="@+id/rl_restaurant"
				android:layout_width="match_parent"
				android:layout_height="73dp"
				android:layout_gravity="center_vertical"
				android:background="@color/white"
				android:gravity="center_vertical">

				<ImageView
					android:id="@+id/restaurant"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginLeft="42dp"
					android:src="@drawable/restaurant" />

				<TextView
					android:id="@+id/tv_restaurant"
					android:layout_width="wrap_content"
					android:layout_height="73dp"
					android:gravity="center_vertical"
					android:layout_centerVertical="true"
					android:layout_marginLeft="56dp"
					android:layout_toRightOf="@id/restaurant"
					android:text="@string/restaurant"
					android:textColor="@color/black"
					android:textSize="17sp" />

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="16dp"
					android:src="@drawable/arrow" />
			</RelativeLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/applistline" />

			<RelativeLayout
				android:id="@+id/rl_shop"
				android:layout_width="match_parent"
				android:layout_height="73dp"
				android:layout_gravity="center_vertical"
				android:background="@color/white"
				android:gravity="center_vertical">

				<ImageView
					android:id="@+id/shop"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginLeft="42dp"
					android:src="@drawable/shop" />

				<TextView
					android:id="@+id/tv_shop"
					android:layout_width="wrap_content"
					android:layout_height="73dp"
					android:layout_centerVertical="true"
					android:layout_marginLeft="56dp"
					android:gravity="center_vertical"
					android:layout_toRightOf="@id/shop"
					android:text="@string/shop"
					android:textColor="@color/black"
					android:textSize="17sp" />

				<ImageView
					android:layout_width="wrap_content"
					android:layout_centerVertical="true"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_marginRight="16dp"
					android:src="@drawable/arrow" />
			</RelativeLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/applistline" />

			<RelativeLayout
				android:id="@+id/rl_entertainment"
				android:layout_width="match_parent"
				android:layout_height="73dp"
				android:layout_gravity="center_vertical"
				android:background="@color/white"
				android:gravity="center_vertical">

				<ImageView
					android:id="@+id/entertainment"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="42dp"
					android:layout_centerVertical="true"
					android:src="@drawable/entertainment" />

				<TextView
					android:id="@+id/tv_entertainment"
					android:layout_width="wrap_content"
					android:layout_height="73dp"
					android:gravity="center_vertical"
					android:layout_centerVertical="true"
					android:layout_marginLeft="56dp"
					android:layout_toRightOf="@id/entertainment"
					android:text="@string/entertainment"
					android:textColor="@color/black"
					android:textSize="17sp" />

				<ImageView
					android:layout_width="wrap_content"
					android:layout_centerVertical="true"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_marginRight="16dp"
					android:src="@drawable/arrow" />
			</RelativeLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/applistline" />

			<!--	<RelativeLayout
                    android:background="@color/white"
                    android:id="@+id/rl_Air_tickets"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_marginLeft="42dp"
                        android:id="@+id/Air_tickets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/entertainment"/>
                    <TextView
                        android:layout_toRightOf="@id/Air_tickets"
                        android:layout_marginLeft="56dp"
                        android:id="@+id/tv_Air_tickets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:text="@string/Air_tickets"/>
                    <ImageView
                        android:src="@drawable/arrow"
                        android:layout_marginRight="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <View
                    android:background="@color/applistline"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>
        -->
		</LinearLayout>
	</com.SelfTourGuide.bangkok.util.OverScrollView>
	<com.google.android.gms.ads.AdView
		android:id="@+id/adView"
		android:background="#00000000"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		ads:adSize="BANNER"
		ads:adUnitId="@string/bannerunit">
	</com.google.android.gms.ads.AdView>


</RelativeLayout>