<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_tab_bottom"
    android:layout_width="fill_parent"
    android:layout_height="55dp"
    android:layout_alignParentBottom="true"
    android:background="@color/white" >
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/navigation_line"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp" >

        <LinearLayout
            android:id="@+id/id_tab_bottom_weixin"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btn_tab_bottom_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:clickable="false"
                android:src="@drawable/strategyclick" />


            <TextView
                android:id="@+id/tv_tab_bottom_weixin"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="bottom|center_horizontal"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/gl" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_friend"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btn_tab_bottom_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:clickable="false"
                android:src="@drawable/subwaynor" />

            <TextView
                android:id="@+id/tv_tab_bottom_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metro"
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:gravity="bottom|center_horizontal"
                android:layout_gravity="bottom|center_horizontal"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_contact"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btn_tab_bottom_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:clickable="false"
                android:src="@drawable/collect_nor" />

            <TextView
                android:id="@+id/tv_tab_bottom_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collection"
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:gravity="bottom|center_horizontal"
                android:layout_gravity="bottom|center_horizontal"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_setting"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/btn_tab_bottom_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:clickable="false"
                android:src="@drawable/morenor" />

            <TextView
                android:id="@+id/tv_tab_bottom_setting"
                android:layout_below="@id/btn_tab_bottom_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:gravity="bottom|center_horizontal"
                android:layout_gravity="bottom|center_horizontal"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>